--- a/TyDtk/Base.lproj/Main.storyboard
+++ b/TyDtk/Base.lproj/Main.storyboard
@@ -2097,7 +2097,7 @@
         <!--Start Do Topic View Controller-->
         <scene sceneID="g4m-Iz-Sis">
             <objects>
-                <viewController id="psZ-67-bwE" customClass="StartDoTopicViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="StartDoTopicViewController" id="psZ-67-bwE" customClass="StartDoTopicViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="eo2-De-ZQn"/>
                         <viewControllerLayoutGuide type="bottom" id="xnx-zL-Ncz"/>
